add new function "move"

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,8 @@
                 "-g",
                 "${workspaceFolder}/main.cpp",
                 "${workspaceFolder}/handles.cpp",
+                "${workspaceFolder}/gameData.cpp",
+                "${workspaceFolder}/figureMover.cpp",
                 "-o",
                 "${workspaceFolder}/build_Ubuntu64/chessServer.exe",
                 "-lboost_system",
