change figure init / prepare rules

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "${workspaceFolder}/main.cpp",
                 "${workspaceFolder}/handles.cpp",
                 "${workspaceFolder}/gameData.cpp",
+                "${workspaceFolder}/figure.cpp",
                 "${workspaceFolder}/figureMover.cpp",
                 "-o",
                 "${workspaceFolder}/build_Ubuntu64/chessServer.exe",
